service.yaml
apiVersion: v1
kind: Service
metadata:
  name: albert01-svc
spec:
  type: ClusterIP
  selector:
    app: albert01
  ports:
  - port: 8080
    targetPort: 8080
